@@ -7,7 +7,7 @@ TARGET = ..\free386.com
 #////////////////////////////////////////////////////////////////////
 # PATH for NASM
 #////////////////////////////////////////////////////////////////////
-ASM    = ..\bin\free386 -q ..\tools\nasm
+ASM    = ..\tools\free386 -q ..\tools\nasm
 ASMOP  = -f obj
 
 #ifdef BUILD_TARGET
@@ -17,13 +17,13 @@ ASMOP += -DBUILD_TARGET=$(BUILD_TARGET)
 #////////////////////////////////////////////////////////////////////
 # for flatlink.exp
 #////////////////////////////////////////////////////////////////////
-LINK   = ..\bin\free386 -q ..\tools\flatlink.exp
+LINK   = ..\tools\free386 -q ..\tools\flatlink.exp
 LINKOP =
 
 #////////////////////////////////////////////////////////////////////
 # for alink.exp
 #////////////////////////////////////////////////////////////////////
-# LINK   = ..\bin\free386 -q ..\tools\alink-p1.exp
+# LINK   = ..\tools\free386 -q ..\tools\alink-p1.exp
 # LINKOP = -oCOM -m
 
 #====================================================================
