@@ -8,7 +8,7 @@ TARGET_EXE = ..\free386.exe
 #///////////////////////////////////////////////////////////////////
 # PATH for NASM
 #///////////////////////////////////////////////////////////////////
-ASM    = ..\bin\free386 -q ..\tools\nasm
+ASM    = ..\tools\free386 -q ..\tools\nasm
 ASMOP  = -f obj -DMSLINK
 
 #------------------------------------------------------------------------------
