@@ -3,7 +3,7 @@ rem
 rem Choice assember
 rem 
 
-..\bin\free386 -q -n ..\tools\nasm %1 %2 %3 %4 %5 %6 %7 %8 %9
+..\tools\free386 -q -n ..\tools\nasm %1 %2 %3 %4 %5 %6 %7 %8 %9
 
 rem free386 -n -q  nasm %1 %2 %3 %4 %5 %6 %7 %8 %9
 rem run386  -nocrt nasm %1 %2 %3 %4 %5 %6 %7 %8 %9
