@@ -1,7 +1,7 @@
-..\bin\free386 -n -q ..\tools\nasm -f bin -o chk_xms.com  chk_xms.asm
-..\bin\free386 -n -q ..\tools\nasm -f bin -o chktbios.com chktbios.asm
-..\bin\free386 -n -q ..\tools\nasm -f bin -o int8elog.com int8elog.asm
-..\bin\free386 -n -q ..\tools\nasm -f bin -o mode_chk.com mode_chk.asm
-..\bin\free386 -n -q ..\tools\nasm -f bin -o vsync_fm.com vsync_fm.asm
-..\bin\free386 -n -q ..\tools\nasm -f bin -o vsynopfm.com vsynopfm.asm
-..\bin\free386 -n -q ..\tools\nasm -f bin -o vsynop98.com vsynop98.asm
+..\tools\free386 -n -q ..\tools\nasm -f bin -o chk_xms.com  chk_xms.asm
+..\tools\free386 -n -q ..\tools\nasm -f bin -o chktbios.com chktbios.asm
+..\tools\free386 -n -q ..\tools\nasm -f bin -o int8elog.com int8elog.asm
+..\tools\free386 -n -q ..\tools\nasm -f bin -o mode_chk.com mode_chk.asm
+..\tools\free386 -n -q ..\tools\nasm -f bin -o vsync_fm.com vsync_fm.asm
+..\tools\free386 -n -q ..\tools\nasm -f bin -o vsynopfm.com vsynopfm.asm
+..\tools\free386 -n -q ..\tools\nasm -f bin -o vsynop98.com vsynop98.asm
